add style.css file and styles

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     	<title>Fake Codes</title>
-
+    	<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
 	<body>
 		<header>
 			<nav>
 				<div>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="">Clients</a></li>
-					<li><a href="">Testmonials</a></li>
-					<li><a href="">Contact</a></li>
+					<ul>
+						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="">Clients</a></li>
+						<li><a href="">Testmonials</a></li>
+						<li><a href="">Contact</a></li>
+					</ul>
 				</div>
 			</nav>
 		</header>
@@ -26,15 +28,15 @@
 			
 		</main>
 
-		<footer>
+		<footer class="footer">
 			<div>
             <!-- Contact Info -->
-            <div>
-                <a href="#"><span>Phone:</span> +255 716 108 065</a>
-                <a href="#"><span>Email:</span> mwinamijr@gmail.com</a>
+            <div class="contact-info">
+                <a href="#"><span>Phone:</span> +255 777 111 000</a>
+                <a href="#"><span>Email:</span> contact@fakecodes.com</a>
             </div>
             <!-- Follow Us -->
-            <div>
+            <div class="follow-us">
                 <span>Follow us</span>
                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
