add contact.html, add style.css, add image/backround.jpg

--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
 
     	<title>Fake Codes</title>
     	<link rel="stylesheet" type="text/css" href="css/style.css">
+    	<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
 	<body>
-		<header>
+		<header class="b-ground">
 			<nav>
 				<div>
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="">Clients</a></li>
 						<li><a href="">Testmonials</a></li>
-						<li><a href="">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
 		</header>
 
 		<main>
-			
+		
 		</main>
 
 		<footer class="footer">
