added copyright message and some css modifications

--- a/index.html
+++ b/index.html
@@ -36,13 +36,7 @@
                 <a href="#"><span>Phone:</span> +255 777 111 000</a>
                 <a href="#"><span>Email:</span> contact@fakecodes.com</a>
             </div>
-            <!-- Follow Us -->
-            <div class="follow-us">
-                <span>Follow us</span>
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            </div>
+            <p class="copy">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
         </div>
 		</footer>
 	</body>
