--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     	<title>Fake Codes</title>
     	<link rel="stylesheet" type="text/css" href="css/style.css">
     	<link rel="stylesheet" type="text/css" href="style.css">
+ 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 	</head>
 
 	<body>
@@ -25,10 +27,65 @@
 			</nav>
 		</header>
 
-		<main>
-		
-		</main>
+		<section class='container'>
+        	<div class="home">
+				
+					<div class="home_content">
+						<div class="container">
+							<div class="row">
+								<div class="col text-center">
+									<h1 class="home_title">Our servises</h1>
+								<div class="home_button trans_200"><a href="#">get started</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
+			<div class="services">
+				
+				<div class="container">
+					<div class="row services_row">
+						<div class="col-lg-4 service_col">
+							<div class="service">
+								<div class="service_image"><img src="images/image 1.jpg" alt=""></div>
+								<div class="service_body">
+									<div class="service_title"><a href="service.html">Web Development</a></div>
+									<div class="service_text">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-4 service_col">
+							<div class="service">
+								<div class="service_image"><img src="images/image 2.png" alt=""></div>
+								<div class="service_body">
+									<div class="service_title"><a href="service.html">Mobile Apps</a></div>
+									<div class="service_text">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-4 service_col">
+							<div class="service">
+								<div class="service_image"><img src="images/image 3.png" alt=""></div>
+								<div class="service_body">
+									<div class="service_title"><a href="service.html">Digital Marketing</a></div>
+									<div class="service_text">
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</div>
+			
+		</section>
 		<footer class="footer">
 			<div>
             <!-- Contact Info -->
