modified contents of home page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="service_body">
 									<div class="service_title"><a href="service.html">Web Development</a></div>
 									<div class="service_text">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla.</p>
+										<p>Here you can get a website of your satisfaction for your bussiness or any service of your need</p>
 									</div>
 								</div>
 							</div>
@@ -64,7 +64,7 @@
 								<div class="service_body">
 									<div class="service_title"><a href="service.html">Mobile Apps</a></div>
 									<div class="service_text">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla.</p>
+										<p>We design both Android and IOS mobile applications</p>
 									</div>
 								</div>
 							</div>
@@ -76,7 +76,7 @@
 								<div class="service_body">
 									<div class="service_title"><a href="service.html">Digital Marketing</a></div>
 									<div class="service_text">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim nulla.</p>
+										<p>Get all sales and buying at your hand.</p>
 									</div>
 								</div>
 							</div>
