added contents of testmonials.html and some style changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="">Clients</a></li>
-						<li><a href="">Testmonials</a></li>
+						<li><a href="testmonials.html">Testmonials</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
@@ -64,7 +64,7 @@
 								<div class="service_body">
 									<div class="service_title"><a href="service.html">Mobile Apps</a></div>
 									<div class="service_text">
-										<p>We design both Android and IOS mobile applications</p>
+										<p>We design both Android and IOS mobile applications. <br><span class='big-font'>Get Yours Today!</span></p>
 									</div>
 								</div>
 							</div>
