added contents and fstyles

--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,50 @@
 <link href="creative.min.css" rel="stylesheet">
 <title> Contact</title>
 </head>
-<body>
-	<header class="b-ground">
-			<nav>
-				<div>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="">Clients</a></li>
-						<li><a href="">Testmonials</a></li>
-						<li class="active"><a href="">Contact</a></li>
-					</ul>
-				</div>
-			</nav>
-	</header>
-	
-    </div>
+	<body>
+		<header class="b-ground">
+				<nav>
+					<div>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="clients.html">Clients</a></li>
+							<li><a href="testmonials.html">Testmonials</a></li>
+							<li class="active"><a href="">Contact</a></li>
+						</ul>
+					</div>
+				</nav>
+		</header>
+		
+	    <div class="container">
+	    	<h2 class="head">Contact Us</h2>
+		  <form action="action_page.php">
+
+		    <label for="fname">First Name</label>
+		    <input type="text" id="fname" name="firstname" placeholder="Your name ....">
+
+		    <label for="lname">Last Name</label>
+		    <input type="text" id="lname" name="lastname" placeholder="Your last name ....">
+
+		    <label for="email">Last Name</label>
+		    <input type="text" id="email" name="email" placeholder="Your email ....">
+
+		    <label for="subject">Subject</label>
+		    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+		    <input type="submit" value="Submit">
+
+		  </form>
+		</div>
+
+		<footer class="footer">
+			<div>
+            <!-- Contact Info -->
+            <div class="contact-info">
+                <a href="#"><span>Phone:</span> +255 777 111 000</a>
+                <a href="#"><span>Email:</span> contact@fakecodes.com</a>
+            </div>
+            <p class="copy">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
+        </div>
+		</footer>
 	</body>
 </html>
