--- a/clients.html
+++ b/clients.html
@@ -19,8 +19,8 @@
 				<div>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="">Clients</a></li>
-						<li class="active"><a href="">Testmonials</a></li>
+						<li class="active"><a href="#">Clients</a></li>
+						<li><a href="testmonials.html">Testmonials</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
@@ -28,7 +28,57 @@
 		</header>
 
 		<section class='container'>
-        	
+            <div class="home">
+                    <div class="home_content">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col text-center">
+                                    <h1 class="home_title">My Clients</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="services">
+                <div>
+                    <div class="row services_row">
+                        <div class="col-lg-4 service_col">
+                            <div class="service">
+                                <div class="service_image"><img src="images/image 1.jpg" alt=""></div>
+                                <div class="service_body">
+                                    <div class="service_title"><a href="service.html">MJR TECHS</a></div>
+                                    <div class="service_text">
+                                        <p>Website owner made with our company</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 service_col">
+                            <div class="service">
+                                <div class="service_image"><img src="images/image 2.png" alt=""></div>
+                                <div class="service_body">
+                                    <div class="service_title"><a href="service.html">DDABLAR</a></div>
+                                    <div class="service_text">
+                                        <p>Our well satisfied Customer</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 service_col">
+                            <div class="service">
+                                <div class="service_image"><img src="images/image 3.png" alt=""></div>
+                                <div class="service_body">
+                                    <div class="service_title"><a href="service.html">schools.com</a></div>
+                                    <div class="service_text">
+                                        <p>They are getting better experience with US</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 		</section>
 		<footer class="footer">
 			<div>
