--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div>
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="">Clients</a></li>
+						<li><a href="clients.html">Clients</a></li>
 						<li><a href="testmonials.html">Testmonials</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
@@ -29,7 +29,6 @@
 
 		<section class='container'>
         	<div class="home">
-				
 					<div class="home_content">
 						<div class="container">
 							<div class="row">
