--- a/testmonials.html
+++ b/testmonials.html
@@ -19,8 +19,8 @@
 				<div>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="">Clients</a></li>
-						<li class="active"><a href="">Testmonials</a></li>
+						<li><a href="clients.html">Clients</a></li>
+						<li class="active"><a href="#">Testmonials</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
